--- a/ConferencePlanner/BackEnd/appsettings.json
+++ b/ConferencePlanner/BackEnd/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-BackEnd-SavePoint2b;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Data Source=tcp:backendaspdonetwsdbserver.database.windows.net,1433;Initial Catalog=BackEndAspDoNetWS_db;User Id=testaspdonet@backendaspdonetwsdbserver;Password=Buzidao5_5"
   },
   "Logging": {
     "LogLevel": {
