--- a/ConferencePlanner/FrontEnd/appsettings.json
+++ b/ConferencePlanner/FrontEnd/appsettings.json
@@ -1,5 +1,5 @@
 {
-  "ServiceUrl": "https://localhost:56009/",
+  "ServiceUrl": "https://backendaspdonetws.azurewebsites.net",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -7,5 +7,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "IdentityDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=FrontEnd;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
